<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/splashscreenbackground"
android:orientation="vertical"
android:gravity="center"
tools:context="com.finalyearproject.learnpashto.veryHardActivity">

    <TextView
        style="@style/IntermediateTitleStyle"
        android:text="Very Hard"/>

    <FrameLayout
        style="@style/frame_layouts"
        android:background="@color/category_vocabulary">

        <TextView
            android:id="@+id/Vocabulary"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/vocabulary_screen_name" />
    </FrameLayout>

    <FrameLayout
        style="@style/frame_layouts"
        android:background="@color/category_family">

        <TextView
            android:id="@+id/Family"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/family_screen_name" />
    </FrameLayout>

    <FrameLayout
        style="@style/frame_layouts"
        android:background="@color/category_conversation">

        <TextView
            android:id="@+id/Days"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/conversations_screen_name" />
    </FrameLayout>

    <FrameLayout
        style="@style/frame_layouts"
        android:background="@color/category_hard_words">

        <TextView
            android:id="@+id/Hard_words"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/hard_words_screen_name" />
    </FrameLayout>

</LinearLayout>

