<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/splashscreenbackground"
android:orientation="vertical"
android:gravity="center"
tools:context="com.finalyearproject.learnpashto.MediumActivity">

    <TextView
        style="@style/IntermediateTitleStyle"
        android:text="Medium"/>

    <FrameLayout
        style="@style/frame_layouts"
        android:background="@color/category_animal">

        <TextView
            android:id="@+id/Animals"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/animals_screen_name" />
    </FrameLayout>

    <FrameLayout
        style="@style/frame_layouts"
        android:background="@color/category_school_supplies">

        <TextView
            android:id="@+id/School"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/school_supplies_screen_name" />
    </FrameLayout>

    <FrameLayout
        style="@style/frame_layouts"
        android:background="@color/category_transportation">

        <TextView
            android:id="@+id/Transport"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/transportation_screen_name" />
    </FrameLayout>

    <FrameLayout
        style="@style/frame_layouts"
        android:background="@color/category_body_parts">

        <TextView
            android:id="@+id/body"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/body_parts_screen_name" />
    </FrameLayout>
</LinearLayout>

