<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.finalyearproject.learnpashto.LearningActivity"
    android:orientation="vertical"
    android:background="@drawable/splashscreenbackground"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Easy card board view -->
        <android.support.v7.widget.CardView
            style="@style/Card_view">
            <LinearLayout
                style="@style/linear_layout_inner_learning_activity"
                android:background="#66ff99"
                android:id="@+id/btnEasy">
                <TextView
                    android:text="@string/learning_easy"
                    style="@style/text_view_learning"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Medium card board view -->
        <android.support.v7.widget.CardView
            style="@style/Card_view">
            <LinearLayout
                style="@style/linear_layout_inner_learning_activity"
                android:background="#ccff33"
                android:id="@+id/btnMedium">
                <TextView
                    android:text="@string/learning_medium"
                    style="@style/text_view_learning"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Hard card board view -->
        <android.support.v7.widget.CardView
            style="@style/Card_view">
            <LinearLayout
                style="@style/linear_layout_inner_learning_activity"
                android:background="#ff8000"
                android:id="@+id/btnHard">
                <TextView
                    android:text="@string/learning_hard"
                    style="@style/text_view_learning"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Very hard card board view -->
        <android.support.v7.widget.CardView
            style="@style/Card_view">
            <LinearLayout
                style="@style/linear_layout_inner_learning_activity"
                android:background="#ff1a1a"
                android:id="@+id/btnVeryHard">
                <TextView
                    android:text="@string/learning_very_hard"
                    style="@style/text_view_learning"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>
